# meetings-exporter

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_TOUR.md  CONTRIBUTING.md  README.md  SECURITY.md  env.template  package.json  pyproject.toml
.github/workflows/: prettier.yml  test.yml
.husky/: pre-commit
src/meetings_exporter/: cli.py  ingestion.py  webex_client.py  webhook_utils.py
src/meetings_exporter/exporters/: factory.py  google_drive.py  local_folder.py
tests/: __init__.py  test_exporters.py  test_ingestion.py  test_meeting_formatter.py  test_webhook_server.py  test_webhook_utils.py
